[tool.poetry]
name = "beiboot_api"
version = "0.1.5"
description = ""
authors = ["Christian Busch <christian@blueshoe.io>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
sentry-sdk = "^1.23.1"
kubernetes = "<24.0.0"
beiboot = "^1.3.1"
timeout-decorator = "^0.5.0"
fastapi-pagination = "^0.12.4"
websockets = "^11.0.3"
semver = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
coverage = "^7.2.7"
mypy = "^1.3.0"
isort = "^5.12.0"
httpx = "^0.24.1"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
