[tool.poetry]
name = "beiboot_api"
version = "0.1.10"
description = ""
authors = ["Christian Busch <christian@blueshoe.io>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
pydantic = "^1.10.12"
sentry-sdk = "^1.29.2"
kubernetes = "<24.0.0"
beiboot = "^1.4.3"
timeout-decorator = "^0.5.0"
fastapi-pagination = "^0.12.10"
websockets = "^11.0.3"
semver = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.1.0"
pytest = "^7.4.2"
coverage = "^7.2.7"
mypy = "^1.4.1"
isort = "^5.12.0"
httpx = "^0.24.1"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
