[tool.poetry]
name = "beiboot_api"
version = "0.1.10"
description = ""
authors = ["Christian Busch <christian@blueshoe.io>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
sentry-sdk = "^1.31.0"
kubernetes = "<24.0.0"
beiboot = "^1.4.3"
timeout-decorator = "^0.5.0"
fastapi-pagination = "^0.12.10"
websockets = "^11.0.3"
semver = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"
coverage = "^7.3.1"
mypy = "^1.5.1"
isort = "^5.12.0"
httpx = "^0.25.0"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
